--- a/.github/workflows/02-e2e-regenerate.yml
+++ b/.github/workflows/02-e2e-regenerate.yml
@@ -26,6 +26,9 @@ jobs:
     steps:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
+        with:
+          ref: ${{github.event.pull_request.head.ref}}
+          fetch-depth: 0
 
       - name: 🔄 Init Cache
         uses: ./.github/actions/npm-cache
@@ -84,34 +87,11 @@ jobs:
             npm run regenerate:screenshots --workspace=react-showcase
           fi
 
-      - name: 🆙 Upload components
-        if: always() && inputs.type == 'components'
-        uses: actions/upload-artifact@v4
-        with:
-          name: snapshots-${{ inputs.type }}
-          path: ./__snapshots__/*/component
-          retention-days: 30
-
-      - name: 🆙 Upload foundations
-        if: always() && inputs.type == 'foundations'
-        uses: actions/upload-artifact@v4
-        with:
-          name: snapshots-${{ inputs.type }}
-          path: ./__snapshots__/foundations
-          retention-days: 30
-
-      - name: 🆙 Upload patternhub
-        if: always() && inputs.type == 'patternhub'
-        uses: actions/upload-artifact@v4
-        with:
-          name: snapshots-${{ inputs.type }}
-          path: ./__snapshots__/*/patternhub
-          retention-days: 30
-
-      - name: 🆙 Upload showcase
-        if: always() && inputs.type == 'showcases'
-        uses: actions/upload-artifact@v4
-        with:
-          name: snapshots-${{ inputs.type }}
-          path: ./__snapshots__/*/showcase
-          retention-days: 30
+      - name: 🆙 Commit newly generated snapshots
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          echo 'COMMIT_MAIL=github-actions[bot]@users.noreply.github.com' >> .env
+          git add ./__snapshots__/*
+          git commit --all -m "refactor(test): updated snapshots" || echo "No changes to commit"
+          git push origin HEAD:${{ github.head_ref }}  # Push back to the same PR branch
