--- a/.github/workflows/02-e2e-regenerate.yml
+++ b/.github/workflows/02-e2e-regenerate.yml
@@ -93,7 +93,6 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           echo 'COMMIT_MAIL=github-actions[bot]@users.noreply.github.com' >> .env
 
-          git config --global --add safe.directory /home/runner/work/core-web/core-web
           git add ./__snapshots__/*
           git commit --all -m "refactor(test): updated snapshots" || echo "No changes to commit"
-          git push origin HEAD:${{ github.head_ref }}  # Push back to the same PR branch
+          git push origin HEAD:${{ github.head_ref }} -c 'safe.directory=/home/runner/work/core-web/core-web' # Push back to the same PR branch
