chore: another try
GH actions/checkout?tab=readme-ov-file#push-a-commit-to-a-pr-using-the-built-in-token

--- a/.github/workflows/02-e2e-regenerate.yml
+++ b/.github/workflows/02-e2e-regenerate.yml
@@ -27,8 +27,7 @@ jobs:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
         with:
-          ref: ${{github.event.pull_request.head.ref}}
-          fetch-depth: 0
+          ref: ${{ github.head_ref }}
 
       - name: 🔄 Init Cache
         uses: ./.github/actions/npm-cache
@@ -89,10 +88,10 @@ jobs:
 
       - name: 🆙 Commit newly generated snapshots
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           echo 'COMMIT_MAIL=github-actions[bot]@users.noreply.github.com' >> .env
 
-          git add ./__snapshots__/*
-          git commit --all -m "refactor(test): updated snapshots" || echo "No changes to commit"
-          git push origin HEAD:${{ github.head_ref }} -c 'safe.directory=/home/runner/work/core-web/core-web' # Push back to the same PR branch
+          git add .
+          git commit -m "refactor(test): updated snapshots" || echo "No changes to commit"
+          git push
