--- a/.github/workflows/02-e2e-regenerate.yml
+++ b/.github/workflows/02-e2e-regenerate.yml
@@ -27,7 +27,8 @@ jobs:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{github.event.pull_request.head.ref}}
+          fetch-depth: 0
 
       - name: 🔄 Init Cache
         uses: ./.github/actions/npm-cache
@@ -90,8 +91,8 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          echo 'COMMIT_MAIL=github-actions[bot]@users.noreply.github.com' >> .env
+          echo 'COMMIT_MAIL=41898282+github-actions[bot]@users.noreply.github.com' >> .env
 
           git add .
-          git commit -m "refactor(test): updated snapshots" || echo "No changes to commit"
-          git push
+          git commit --all -m "refactor(test): updated snapshots" || echo "No changes to commit"
+          git push origin HEAD:${{ github.head_ref }} # Push back to the same PR branch
