--- a/.github/workflows/02-e2e-regenerate.yml
+++ b/.github/workflows/02-e2e-regenerate.yml
@@ -93,6 +93,8 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           echo 'COMMIT_MAIL=41898282+github-actions[bot]@users.noreply.github.com' >> .env
 
+          git config --global --add safe.directory '*'
+
           git add .
           git commit --all -m "refactor(test): updated snapshots" || echo "No changes to commit"
           git push origin HEAD:${{ github.head_ref }} # Push back to the same PR branch
