--- a/.github/workflows/02-e2e-regenerate.yml
+++ b/.github/workflows/02-e2e-regenerate.yml
@@ -96,6 +96,6 @@ jobs:
           git config --system --add safe.directory $GITHUB_WORKSPACE
           # git config --system --add safe.directory ${{ GITHUB_WORKSPACE }}
 
-          git add .
+          git add __snapshots__/*
           git commit --all -m "refactor(test): updated snapshots" || echo "No changes to commit"
           git push origin HEAD:${{ github.head_ref }} # Push back to the same PR branch
