--- a/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
+++ b/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Download foundations
         uses: actions/download-artifact@v4
         # Only download artifact if the artifact exists
-        if: contains(needs.regenerate-snapshots-components.outputs.artifacts, 'snapshots-foundations')
+        if: contains(needs.regenerate-snapshots-foundations.outputs.artifacts, 'snapshots-foundations')
         with:
           name: snapshots-foundations
           path: ./__snapshots__/foundations
@@ -36,7 +36,7 @@ jobs:
       - name: Download patternhub
         uses: actions/download-artifact@v4
         # Only download artifact if the artifact exists
-        if: contains(needs.regenerate-snapshots-components.outputs.artifacts, 'snapshots-patternhub')
+        if: contains(needs.regenerate-snapshots-patternhub.outputs.artifacts, 'snapshots-patternhub')
         with:
           name: snapshots-patternhub
           path: ./__snapshots__/*/patternhub
@@ -44,7 +44,7 @@ jobs:
       - name: Download showcase
         uses: actions/download-artifact@v4
         # Only download artifact if the artifact exists
-        if: contains(needs.regenerate-snapshots-components.outputs.artifacts, 'snapshots-showcase')
+        if: contains(needs.regenerate-snapshots.outputs.artifacts, 'snapshots-showcase')
         with:
           name: snapshots-showcase
           path: ./__snapshots__/*/showcase
