refactor: another try

--- a/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
+++ b/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
@@ -35,6 +35,7 @@ jobs:
 
       - name: Download patternhub
         uses: actions/download-artifact@v4
+        if: always() && contains(needs.regenerate-snapshots-patternhub.outputs.artifacts, 'snapshots-patternhub')
         with:
           name: snapshots-patternhub
           path: ./__snapshots__/
@@ -66,12 +67,12 @@ jobs:
           git remote set-url origin https://x-access-token:${PAT_COMMIT}@github.com/${{ github.repository }}.git
           git push origin HEAD:${{ github.head_ref }} # Push back to the same PR branch
 
-      - name: Trigger a new workflow (ci.yml)
+      - name: Trigger a new workflow (default.yml)
         env:
           PAT_COMMIT: ${{ secrets.PAT_COMMIT }}
         run: |
-          # gh workflow run pull-request --ref ${{ github.ref_name }}
-          curl -X POST https://api.github.com/repos/${{ github.repository }}/actions/workflows/pull-request.yml/dispatches \
-            -H "Authorization: token $PAT_COMMIT" \
-            -H "Accept: application/vnd.github+json" \
-            -d '{"ref":"${{ github.ref_name }}"}'
+          gh workflow run default --ref ${{ github.ref_name }}
+          # curl -X POST https://api.github.com/repos/${{ github.repository }}/actions/workflows/default.yml/dispatches \
+          #   -H "Authorization: token $PAT_COMMIT" \
+          #   -H "Accept: application/vnd.github+json" \
+          #   -d '{"ref":"${{ github.ref_name }}"}'
