--- a/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
+++ b/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
@@ -70,6 +70,7 @@ jobs:
       - name: Trigger a new workflow (default.yml)
         env:
           PAT_COMMIT: ${{ secrets.PAT_COMMIT }}
+          GH_TOKEN: ${{ github.token }}
         run: |
           gh workflow run default --ref ${{ github.ref_name }}
           # curl -X POST https://api.github.com/repos/${{ github.repository }}/actions/workflows/default.yml/dispatches \
