Revert "refactor: another try"
This reverts commit 8b1822270925a2a042c6783dd2e1aeb888c13dc9.

--- a/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
+++ b/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
@@ -66,6 +66,6 @@ jobs:
           gh pr create --base ${{ github.head_ref }} --head "$NEW_PR_BRANCH" --title "Automated PR: Auto update snapshots" --body "This PR was created automatically by a GitHub Action."
 
       - name: 🤖 Enable auto-merge
-        run: gh pr merge --squash "$NEW_PR_BRANCH" --auto "1"
+        run: gh pr merge --squash "$NEW_PR_BRANCH"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
