--- a/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
+++ b/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
@@ -45,6 +45,14 @@ jobs:
           name: snapshots-showcases
           path: ./__snapshots__/
 
+      #https://docs.github.com/en/apps/creating-github-apps/authenticating-with-a-github-app/making-authenticated-api-requests-with-a-github-app-in-a-github-actions-workflow
+      - name: 🧬 Generate a token
+        id: generate-token
+        uses: actions/create-github-app-token@v2
+        with:
+          app-id: ${{ vars.AUTO_MERGE_APP_ID }}
+          private-key: ${{ secrets.AUTO_MERGE_PRIVATE_KEY }}
+
       - name: 🏗️ Create new branch and commit changes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -65,7 +73,7 @@ jobs:
         run: |
           gh pr create --base ${{ github.head_ref }} --head "$NEW_PR_BRANCH" --title "Automated PR: Auto update snapshots" --body "This PR was created automatically by a GitHub Action."
 
-      - name: 🤖 Enable auto-merge
+      - name: 🤖 Squash the PR
         run: gh pr merge --squash "$NEW_PR_BRANCH"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
