--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"compilerOptions": {
+		"lib": ["es2022", "dom"],
 		"jsx": "preserve",
 		"jsxImportSource": "@builder.io/mitosis",
 		"esModuleInterop": true,
